--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,7 +77,7 @@
   width: 100%;
 }
 
-@keyframes scroll-out {
+@keyframes scroll-out-right {
   0% {
     left: 0;
   }
@@ -87,7 +87,17 @@
   }
 }
 
-@keyframes scroll-in {
+@keyframes scroll-out-left {
+  0% {
+    right: 0;
+  }
+
+  100% {
+    right: 100%;
+  }
+}
+
+@keyframes scroll-in-from-left {
   0% {
     right: 100%;
   }
@@ -97,12 +107,32 @@
   }
 }
 
-.exiting-img-anim {
-  animation: scroll-out 1s;
+@keyframes scroll-in-from-right {
+  0% {
+    left: 100%;
+  }
+
+  100% {
+    left: 0;
+  }
+}
+
+.exiting-img-anim-next-btn {
+  animation: scroll-out-right 1s;
   animation-fill-mode: forwards;
 }
 
-.entering-img-anim {
-  animation: scroll-in 1s;
+.entering-img-anim-next-btn {
+  animation: scroll-in-from-left 1s;
+  animation-fill-mode: forwards;
+}
+
+.exiting-img-anim-prev-btn {
+  animation: scroll-out-left 1s;
+  animation-fill-mode: forwards;
+}
+
+.entering-img-anim-prev-btn {
+  animation: scroll-in-from-right 1s;
   animation-fill-mode: forwards;
 }
