Add style for the current image rect

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,8 @@
+:root {
+  --curr-nav-rect: #868686;
+  --default-nav-rect: #c4c4c4;
+}
+
 .bg {
   position: absolute;
   height: 100vh;
@@ -55,8 +60,12 @@
 .navigation-rect {
   height: 15px;
   width: 150px;
-  background-color: #c4c4c4;
+  background-color: var(--default-nav-rect);
   cursor: pointer;
+}
+
+.curr-nav-rect {
+  background-color: var(--curr-nav-rect);
 }
 
 .img-container {
