--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,8 +26,8 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 989px;
-  width: 2300px;
+  height: 65vh;
+  width: 100vw;
 }
 
 .right-arrow {
@@ -128,21 +128,21 @@
 }
 
 .exiting-img-anim-next-btn {
-  animation: scroll-out-right 1s;
-  animation-fill-mode: forwards;
-}
-
-.entering-img-anim-next-btn {
-  animation: scroll-in-from-left 1s;
-  animation-fill-mode: forwards;
-}
-
-.exiting-img-anim-prev-btn {
   animation: scroll-out-left 1s;
   animation-fill-mode: forwards;
 }
 
-.entering-img-anim-prev-btn {
+.entering-img-anim-next-btn {
   animation: scroll-in-from-right 1s;
+  animation-fill-mode: forwards;
+}
+
+.exiting-img-anim-prev-btn {
+  animation: scroll-out-right 1s;
+  animation-fill-mode: forwards;
+}
+
+.entering-img-anim-prev-btn {
+  animation: scroll-in-from-left 1s;
   animation-fill-mode: forwards;
 }
