--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,6 +74,7 @@
   overflow: hidden;
   height: 65vh;
   width: 65vw;
+  background-color: black;
 }
 
 .new-img {
@@ -127,6 +128,34 @@
   }
 }
 
+@keyframes img-appear {
+  0% {
+    opacity: 0;
+    left: 0;
+    right: 0;
+  }
+
+  100% {
+    opacity: 1;
+    left: 0;
+    right: 0;
+  }
+}
+
+@keyframes img-disappear {
+  0% {
+    opacity: 1;
+    left: 0;
+    right: 0;
+  }
+
+  100% {
+    opacity: 0;
+    left: 0;
+    right: 0;
+  }
+}
+
 .exiting-img-anim-next-btn {
   animation: scroll-out-left 1s;
   animation-fill-mode: forwards;
@@ -144,5 +173,15 @@
 
 .entering-img-anim-prev-btn {
   animation: scroll-in-from-left 1s;
+  animation-fill-mode: forwards;
+}
+
+.exiting-img-anim-disappear-btn {
+  animation: img-disappear 1s;
+  animation-fill-mode: forwards;
+}
+
+.entering-img-anim-appear-btn {
+  animation: img-appear 1s;
   animation-fill-mode: forwards;
 }
