--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -45,6 +45,7 @@
 .arrow-img {
   width: 40%;
   height: 40%;
+  user-select: none;
 }
 
 .arrow-container {
@@ -98,6 +99,7 @@
   object-fit: cover;
   height: 100%;
   width: 100%;
+  user-select: none;
 }
 
 @keyframes scroll-out-right {
